build path page fixes

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
@@ -43,7 +43,7 @@
       </li>
       <li>
         On the <strong>Libraries</strong> page, define the libraries required by your project. Libraries come in different forms. There are buttons for adding a library in each
-        form. By default, each Java project has a JRE_LIB entry on the build path. This entry stands for the workbench's default JRE.
+        form. By default, each Java project has a 'JRE System Library' entry on the build path. This entry stands for the workbench's default JRE.
       </li>
       <li>
         On the <strong>Order and Export</strong> page, define the Java build path order. The recommended ordering is to have source entries before the library entries and the
