--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
@@ -17,7 +17,7 @@
       A library folder is an ordinary folder containing a collection of class files inside the workbench. Use this format for a library when a library is not packaged as a JAR
       file.
     </p>
-     <em>Note: You cannot attach source to a library folder.</em> To add a library folder to the project's build class path, follow these steps: 
+      To add a library folder to the project's build class path, follow these steps: 
     <ol>
       <li>
         Select the project, and from its context menu, select <strong>Properties</strong>.
@@ -32,11 +32,9 @@
         Click the <strong>Add Class Folder</strong> button.
       </li>
       <li>
-        In the dialog that appears, select the <strong>Create New Folder</strong> and press the <strong>OK</strong> button.
-      </li>
-      <li>
-        In the resulting dialog, enter the name for the library folder and press the <strong>OK</strong> button.
-      </li>
+        In the dialog that appears, select a folder to add press the <strong>OK</strong> button.
+      If you want to add a not yet existing folder use first  <strong>Create
+	New Folder.</strong> After the folder is created select the new folder and press the <strong>OK</strong> button</li>
     </ol>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><a href="../concepts/concepts-4.htm"></a>
