--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -37,7 +37,7 @@
       </li>
       <li>
         In the dialog that appears, select the JAR file that you want to add.
-      </li>
+      Note that you can add multiple JARs at once.</li>
     </ol>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
     <p>
