--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -32,22 +32,18 @@
          <p><img src="../images/classpathVar.gif" width=389 height=462 alt="Classpath variable dialog"></p>
       </li>
       <li>
-        Press <strong>Edit...</strong> to add a new classpath variable or edit an existing one.
-      </li>
-      <li>
         Select a classpath variable then press <strong>OK</strong>.
       </li>
       <li>
-        If the variable resolves to a folder, you have to specify a path extension that points to a JAR.
-        To do this press the <strong>Extend...</strong> button. If the
-        variable already resolves to a JAR file you can click <strong>OK</strong> directly.
+        If the variable resolves to a folder, you can specify a path extension that points to a JAR.
+        To do this press the <strong>Extend...</strong> button. </li>
+	<li>Press <strong>Edit...</strong> to create a new classpath variable or edit an existing one.
       </li>
-    </ol>
+</ol>
     <p>
       <strong>Hint</strong>: You can add multiple variable entries at once to the Java build path:
       Select more than one variable in the <strong>New Variable Classpath
       Entry</strong> dialog, or multiple JAR files in the <strong>Variable Extension</strong> dialog.<br>
-      <br>
     </p>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
     <p>
