--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
@@ -39,12 +39,12 @@
         other projects.
       </li>
       <li>
-        Optionally, on the <strong>Libraries</strong> tab, select JAR files and CLASS file containers to add to the build path for this new project and attach source to the JAR
+        Optionally, on the <strong>Libraries</strong> tab, select JAR files and CLASS folders to add to the build path for this new project and attach source to the JAR
         files. Use these options only if your project requires additional libraries.
       </li>
       <li>
         On the <strong>Order and Export</strong> tab, use the&nbsp;<strong><strong>Up</strong></strong> and&nbsp;<strong><strong>Down</strong></strong> buttons to move the
-        selected JAR file or CLASS file container up or down in the build path order for this new project.
+        selected JAR file or CLASS folders  up or down in the build path order for this new project.
       </li>
       <li>
         Click&nbsp;<strong><strong>Finish</strong></strong> when you are done.
