--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -21,6 +21,7 @@ OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</stro
   <a href="#Compatibility with Previous Release">2. Compatibility with Previous Releases</a><br>
   <a href="#Upgrading">3. Upgrading a Workspace from a Previous Release</a><br>
   <a href="#Known Issues">4. Known Issues</a><br>
+  <a href="#Running Eclipse">5. Running Eclipse</a><br>
   <a href="#Interoperability with Previous Releases">5. Interoperability with Previous Releases</a><br>
   </p>
 </blockquote>
@@ -1518,7 +1519,35 @@ works. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=18108">18108</
 when trying to obtain the timestamp of a newly uploaded file. This causes a
 &quot;file does not exist&quot; error. The workaround is to <b>Synchronize</b>
 again and continue. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=19715">19715</a>)</p>
-<h2>5. <a name="Interoperability with Previous Releases">Interoperability with
+<h2>5. <a name="Running Eclipse">Running Eclipse</a></h2>
+<p>After installing the Eclipse release in a directory, start the Workbench by running the Eclipse executable
+included with the release. On Windows, the executable file is called <samp>eclipse.exe</samp>,
+and is located in
+the <code>eclipse</code> subdirectory of the install. If installed at <code>c:\eclipse-SDK-2.1-win32</code>,
+the executable is <code>c:\eclipse-SDK-2.1-win32\eclipse\eclipse.exe</code>. <b>Note:</b> Set-up on
+other operating environments is
+analogous.</p>
+<p>If you do not specify otherwise, the Eclipse creates a default workspace in a
+subdirectory as a sibling of the executable (that is, at, <code>c:\eclipse-SDK-2.1-win32\eclipse\workspace</code>).
+This workspace directory is used as the default content area for your projects
+as well as for holding any required metadata. For shared or multi-workspace
+installs you must explicitly specify the location for your workspace using the -data command line
+argument; for example,&nbsp;</p>
+<blockquote>
+  <p><code>eclipse -data c:\myworkspace</code></p>
+</blockquote>
+<p>To create a Windows shortcut to an installed Eclipse and a particular
+workspace (e.g., <code>c:\myworkspace</code>):</p>
+<ol>
+  <li>Navigate to <code> eclipse.exe</code> in Windows Explorer and use Create
+    Shortcut on the content menu.
+  <li>Select the shortcut and edit its Properties. In the Target: field append
+    the <code>-data</code> option followed by the location of the workspace
+    (e.g., &quot;<code>-data c:\myworkspace</code>&quot;).
+</ol>
+<p>Opening this shortcut launches Eclipse on the specified workspace. (You can
+drag the shortcut to the Windows Desktop if you want to keep it in easy reach.)</p>
+<h2>6. <a name="Interoperability with Previous Releases">Interoperability with
 Previous Releases</a></h2>
 <h3>Interoperability of Release 2.1 and 2.0</h3>
 <h4>Sharing projects between heterogeneous Eclipse 2.0 and 2.1</h4>
