Fix typo in Running Eclipse section

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -1527,7 +1527,7 @@ the <code>eclipse</code> subdirectory of the install. If installed at <code>c:\e
 the executable is <code>c:\eclipse-SDK-2.1-win32\eclipse\eclipse.exe</code>. <b>Note:</b> Set-up on
 other operating environments is
 analogous.</p>
-<p>If you do not specify otherwise, the Eclipse creates a default workspace in a
+<p>If you do not specify otherwise, Eclipse creates a default workspace in a
 subdirectory as a sibling of the executable (that is, at, <code>c:\eclipse-SDK-2.1-win32\eclipse\workspace</code>).
 This workspace directory is used as the default content area for your projects
 as well as for holding any required metadata. For shared or multi-workspace
