Go To Resource/Open Resource Navigate menu items

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-46ag.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-46ag.htm
@@ -22,8 +22,7 @@
     Resources</b> list, and click <b>OK</b>.</li>
 </ol>
 
-<p>The view displays the selected resource.
-</p>
+<p>The view displays the selected resource. Note that the view must have focus for the <B>Go To &gt; Resource</B> action to be enabled.</p>
 <p>
 If you want to open a particular resource in an editor rather than select
 it in a view, you can use the <b>Navigate &gt; Open Resource</b> action.
