--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -723,7 +723,7 @@
 			wish to restart, and select <b>Drop to Frame</b> from its context
 			menu. The current instruction pointer will be reset to the first
 			executable statement in the method. Note that this works for non-top
-			stack frames as well. Drop to frame is only available when debuggin
+			stack frames as well. Drop to frame is only available when debugging
 			with a 1.4 or higher VM, or the J9 VM.</td>
 		</tr>
 		<tr>
