--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -728,11 +728,10 @@
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Hot code replace</b></td>
-			<td valign="top" align="left">The debugger supports Hot Code Replace
+			<td valign="top" align="left">The debugger supports hot code replace
 			when debugging with a 1.4 or higher VM, or the J9 VM. This lets you
 			make changes to code you are currently debugging. Note that some
-			changes such as new or deleted methods, class variables or inner
-			classes cannot be hot loaded.</td>
+			changes such as member addition and removal cannot be hot loaded.</td>
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Stepping into selections</b></td>
@@ -767,8 +766,8 @@
 			<td valign="top" align="right"><b>Watch points</b></td>
 			<td valign="top" align="left">
 			<p>A watch point is a breakpoint that suspends execution whenever a
-			specified variable is accessed or modified. To set a watchpoint,
-			select a variable in the Outline view and choose <b>Add/Remove
+			specified field is accessed or modified. To set a watchpoint,
+			select a field in the Outline view and choose <b>Add/Remove
 			Watchpoint</b> from its context menu. To configure a watchpoint,
 			select the watchpoint in the <b>Breakpoints</b> view and choose <b>Properties...</b>
 			from its context menu. The most important properties for this type of
@@ -781,7 +780,8 @@
 			<td valign="top" align="right"><b>Threads &amp; Monitors view</b></td>
 			<td valign="top" align="left">
 			<p>The debugger's<b> Threads and Monitors</b> view shows which
-			threads are holding locks and which are waiting to acquire locks.</p>
+			threads are holding locks and which are waiting to acquire locks.
+			Note that not all virtual machines support this feature.</p>
 			<p><img src="../whatsNew/images/threads-monitors.gif" width=373 height=260 alt="Monitors view showing deadlock cycles"></p>
 			
 			</td>
@@ -876,7 +876,7 @@
 				<li>If the 'Suspend execution on compilation errors' preference on
 				the Java&gt;Debug preference page is set and you are debugging, the
 				debug session will suspend as if a breakpoint had been hit. Note
-				that if your VM supports Hot Code Replace, you could then fix the
+				that if your VM supports hot code replace, you could then fix the
 				compilation error and resume debugging</li>
 				<li>Otherwise, execution will terminate with a 'unresolved
 				compilation' error</li>
@@ -902,7 +902,7 @@
 			<ul>
 				<li>When entering a condition for a breakpoint</li>
 				<li>In the Details pane of the Variables &amp; Expressions view</li>
-				<li>When entering a Details Formatter code snippet</li>
+				<li>When entering a detail formatter code snippet</li>
 				<li>When entering code in a Scrapbook page</li>
 				<li>In the Display view</li>
 			</ul>
