Typos in sections numbers

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -22,7 +22,7 @@ OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</stro
   <a href="#Upgrading">3. Upgrading a Workspace from a Previous Release</a><br>
   <a href="#Known Issues">4. Known Issues</a><br>
   <a href="#Running Eclipse">5. Running Eclipse</a><br>
-  <a href="#Interoperability with Previous Releases">5. Interoperability with Previous Releases</a><br>
+  <a href="#Interoperability with Previous Releases">6. Interoperability with Previous Releases</a><br>
   </p>
 </blockquote>
 <h2>1. <a name="Target Operating Environments"></a> Target Operating
@@ -1549,7 +1549,7 @@ workspace (e.g., <code>c:\myworkspace</code>):</p>
 drag the shortcut to the Windows Desktop if you want to keep it in easy reach.)</p>
 <h2>6. <a name="Interoperability with Previous Releases">Interoperability with
 Previous Releases</a></h2>
-<h3>Interoperability of Release 2.1 and 2.0</h3>
+<h3>6.1 Interoperability of Release 2.1 and 2.0</h3>
 <h4>Sharing projects between heterogeneous Eclipse 2.0 and 2.1</h4>
 <p>Special care is required when a project in a team repository is being loaded
 and operated on by developers using Eclipse-based products based on different
