*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
@@ -68,10 +68,11 @@ package com.xyz;
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
+       <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
        <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
-       <a href="../tasks/tasks-45.htm">Using the Package Explorer</a><br>
+       <a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
        <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
+       <a href="../tasks/tasks-45.htm">Using the Package Explorer</a><br>
     </p>
     <p>
       <img src="../images/ngrelr.gif" width=159 height=27 alt="Related reference">
