--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -40,7 +40,7 @@
       </li>
       <li>
         Click the <strong>Browse</strong> button next to the <strong>Zip file</strong> field and browse to select
-        &lt;workbenchRoot&gt;/plugins/org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.<br>
+        &lt;eclipseInstallPath&gt;/plugins/org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.<br>
          <strong>Note:</strong> This step assumes that the JDT example plug-ins have been downloaded and installed.<br>
       </li>
       <li>
