*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
@@ -67,6 +67,10 @@
 		<p><img src="../images/qs-WorkingWithExistingLayout45.gif" width=558 height=454 alt="Java perspective"></p>
     </li>
 	</ol>
+	<em>Note: </em>Files in &quot;src-common&quot; are shared. So editing &quot;Common.java&quot; in &quot;Product1&quot;
+	will modify &quot;Common.java&quot; in &quot;Product2&quot;. However they are compiled in the context of their
+	respective projects. Two &quot;Common.class&quot; files will be generated; one for each project. If the two projects have 
+	different compiler options, then different errors could be reported on each &quot;Common.java&quot; file.
 	
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
