*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -18,25 +18,24 @@
     can be translated for different countries and languages without rebuilding
     the Java program.</p>
 
-    <p>The JDT provides the following support for internationalization and string externalization:</p>
+    
+<p>The JDT provides the following support for internationalization and string 
+  externalization:</p>
 
+    
+<ul>
+  <li> A compiler option lets you mark non-externalized strings as compile-time 
+    warnings or errors. 
     <ul>
-      <li>
-        A compiler option lets you mark non-externalized strings as compile-time warnings or errors. 
-
-        <ul>
-          <li>See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Problems &gt; Usage of non-externalized strings</span> preference</li>
-        </ul>
-      </li>
-
-      <li>Tools allow you to find compilation units that contain strings that
-        have not been externalized.</li>
-
-      <li>A wizard is provided to guide you through externalizing the strings.</li>
-
-      <li>Tools help you to find unused and incorrectly used keys for strings
-        located in property files.</li>
+      <li>See the <span class="control">Window &gt; Preferences &gt; Java &gt; 
+        Compiler &gt; Problems &gt; Usage of non-externalized strings</span> preference</li>
     </ul>
+  </li>
+  <li>Tools that allow you to find strings that have not been externalized.</li>
+  <li>A wizard that will guide you through externalizing the strings.</li>
+  <li>Tools that help you to find unused and incorrectly used keys for strings 
+    located in property files.</li>
+</ul>
 
     <p>Comments can be used to denote strings that should not be externalized
     and should not result in compile-time warnings or errors. These comments are of form <code>//$NON-NLS-n$</code>
