--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
@@ -13,13 +13,17 @@
 
     <p>To find strings to externalize:</p>
 
-    <ul>
-      <li>In a Java view (e.g. Package Explorer), select a set (which can contain a single element) of packages, source folders or projects.</li>
-
-      <li>From the menu bar, select <span class="control">Source &gt; Find Strings to Externalize</span></li>
-
-      <li>A dialog comes up with a list of all compilation units that have some not-externalized strings</li>
-    </ul>
+    
+<ul>
+  <li>In a Java view (e.g. Package Explorer), select a set of packages, source 
+    folders or projects.</li>
+  <li>From the menu bar, select <span class="control">Source &gt; Find Strings 
+    to Externalize</span></li>
+  <li>A dialog comes up with a list of all compilation units that have some not-externalized 
+    strings</li>
+  <li>In the dialog, you can double click on a listed compilation unit or press 
+    the <b>Externalize</b> button to open the Externalize Strings wizard</li>
+</ul>
 
     <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
      <a href="../concepts/cnls.htm">String Externalization</a></p>
