Fixed screen shot

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OpenJavaEditor.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OpenJavaEditor.htm
@@ -60,7 +60,7 @@
 		    outline element to be displayed in the Java editor.&nbsp; In the example
 		    below, only the <em>setUp()</em> method is displayed.
 			<p>
-			<img src="../images/qs-11.gif" width=441 height=368 alt="Show selected element only tool bar button"> 
+			<img src="../images/qs-11.gif" alt="Show selected element only tool bar button"> 
 			</p>
 		  </li>
 		  <li> Press the <strong>Show Source of Selected Element Only</strong> button 
