new tip added from andre (compare of property files)

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -610,9 +610,36 @@
       will change to <img src="images/ff4.gif" width="16" height="16" alt="Fallure or error occurred"> 
       (or <img src="images/juniterr.gif" width="16" height="16" alt="Fisihed with failure or error"> 
       if tests are finished) and the JUnit view will appear. This behavior can 
-      be configured via the <strong>Java > JUnit preference page</strong>.</td>
+      be configured via the <b>Java > JUnit preference page</b>.</td>
 		</tr>
+	<tr>
+		<td valign="top" align="right">
+			<b>Structural compare of property files</b>
+		</td>
 		
+		<td valign="top" align="left">
+			A structural comparison of Java property files (extension: .properties) 
+			ignores the textual order of properties and better shows
+			what properties were changed, added, or removed.
+			<p>
+			For initiating a structural comparison of property files you have two options:
+			<ul>
+				<li>Select two file in the Package Explorer or Navigator and select
+					<b>Compare With</b> &gt; <b>Each Other</b>.
+					If the files have differences, they are opened into a Compare Editor.
+					The top pane shows the affected properties; clicking on one of them
+					shows the source of the property in the bottom pane.
+				</li>
+				<li>
+					In any context where a file comparison is involved (e.g. a CVS
+					Synchronization) a double click on a property file not only shows
+					the content of the file in a text compare viewer, but it also performs
+					a structural compare and opens a new pane showing the results.
+				</li>
+			</ul>
+			<p><img src="images/compare-properties.gif" width=495 height=240 alt="Structural compare of property files"></p>
+		</td>
+	</tr>		
 		
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Define prefixes or
