--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -610,7 +610,7 @@
       will change to <img src="images/ff4.gif" width="16" height="16" alt="Fallure or error occurred"> 
       (or <img src="images/juniterr.gif" width="16" height="16" alt="Fisihed with failure or error"> 
       if tests are finished) and the JUnit view will appear. This behavior can 
-      be configured via the <b>Java > JUnit preference page</b>.</td>
+      be configured via the <b>Java > JUnit </b>preference page.</td>
 		</tr>
 	<tr>
 		<td valign="top" align="right">
@@ -637,7 +637,7 @@
 					a structural compare and opens a new pane showing the results.
 				</li>
 			</ul>
-			<p><img src="images/compare-properties.gif" width=495 height=240 alt="Structural compare of property files"></p>
+			<p><img src="images/compare-properties.gif" width="466" height="240" alt="Structural compare of property files"></p>
 		</td>
 	</tr>		
 		
