--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-115a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-115a.htm
@@ -27,7 +27,7 @@
       </li>
       <li>
         On the <strong>Libraries</strong> tab, select the library folder to which you want to attach source.<br>
-         Expand the node by clicking on the plus and select the node <em>Souce Attachement</em>.
+         Expand the node by clicking on the plus and select the node <em>Source Attachment</em>.
          Click the <strong>Edit </strong> button to bring up the source attachment dialog.
       </li>
       <li>
