--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-116.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-116.htm
@@ -24,7 +24,7 @@
       </li>
       <li>
         On the <strong>Libraries</strong> tab, select the class path variable to which you want to attach source.<br>
-         Expand the node by clicking on the plus and select the node <em>Souce Attachement</em>. Click the <strong>Edit </strong> button to bring up the source attachment dialog.
+         Expand the node by clicking on the plus and select the node <em>Source Attachment</em>. Click the <strong>Edit </strong> button to bring up the source attachment dialog.
       </li>
       <li>
         In <strong>Location variable path</strong> field, use a variable to define the location of the archive. Use
