--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -29,20 +29,21 @@
         Select <strong>Java</strong> from the left pane and <strong>Java Project</strong> from the right pane, then click <strong>Next</strong>. The New Java Project wizard opens.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Project name</strong></strong> field, type a name for your new Java project.
+        In the <strong>Project name</strong> field, type a name for your new Java project.
       </li>
       <li>
         Check or clear the <strong>Use default</strong> check box to indicate whether you want to use the default location for your new project. If you clear this check box, then
         type a path or click <strong>Browse</strong> to select a location for the project. Click&nbsp;<strong><strong>Next</strong></strong>. The Java Settings Page opens.
       </li>
       <li>
-        On the <strong>Source</strong> tab, click the&nbsp;<strong><strong>Add Folder</strong></strong> button.
-      </li>
+        On the <strong>Source</strong> tab, click the&nbsp;<strong>Add Folder</strong> button. The <strong>Source
+	Folder Selection</strong> dialog opens.</li>
       <li>
         Click the&nbsp;<strong><strong>Create New Folder</strong></strong> button to create new source folder. You can also create new source folders at any time
         later.
       </li>
-      <li>
+	<li>Select the newly created folders in the <strong>Source Folder Selection</strong> and press <strong>OK</strong></li>
+	<li>
         Optionally, replace the default name in the&nbsp;<strong><strong>Default output folder</strong></strong> field to use a different name for the output folder.
       </li>
       <li>
@@ -52,11 +53,11 @@
         On the <strong>Libraries</strong> tab, select JAR files and CLASS file containers to add to the build path for this new project and attach source to the JAR files.
       </li>
       <li>
-        On the <strong>Order and Export</strong> tab, use the&nbsp;<strong><strong>Up</strong></strong> and&nbsp;<strong><strong>Down</strong></strong> buttons to move the
+        On the <strong>Order and Export</strong> tab, use the <strong>Up</strong> and <strong>Down</strong> buttons to move the
         selected JAR file or CLASS file container up or down in the build path order for this new project.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong> when you are done.
+        Click&nbsp;<strong>Finish</strong> when you are done.
       </li>
     </ol>
     <blockquote>
