*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -10,7 +10,7 @@
 <h1> JDT Questions Index</h1>
 <h2> JDT Core</h2>
 <ul>
-  <li><a href="../guide/jdt_int_devprocess.htm">What is available in the JDT Core 
+  <li><a href="../guide/jdt_int_core.htm">What is available in the JDT Core 
     API Packages?</a> </li>
   <li><a href="../guide/jdt_api_run.htm">How do I launch a Java program from the 
     platform?</a> </li>
@@ -26,7 +26,7 @@
   </li>
   <li><a href="../guide/jdt_api_codeassist.htm">How do I programmatically use 
     CodeAssist and CodeSelect?</a> </li>
-  <li><a href="../guide/jdt_int_elements.htm">How are Java projects, folders, 
+  <li><a href="../guide/jdt_int_model.htm">How are Java projects, folders, 
     and files different from regular resources?</a> </li>
 </ul>
 <h2> JDT UI</h2>
