a bunch of new stuff

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -76,6 +76,15 @@
 			&gt; Code Generation &gt; Names)</b></td>
 		</tr>
 		<tr>
+		<td width="20%" valign="top" align="right"><b>Delete Getters and Setters together with a field</b></td>
+		
+    <td valign="top" align="left" width="80%">When you delete a field, Eclipse 
+      can offer deleting Getter and Setter methods for it. If you use a name prefix 
+      or suffix for fields, then be sure to specify this in the Code Generation 
+      preference page <b>(Window &gt; Preferences &gt; Java &gt; Code Generation 
+      &gt; Names)</b>.</td>
+		</tr>
+		<tr>
 			<td width="20%" valign="top" align="right"><b>Create delegate methods</b></td>
    <td valign="top" align="left" width="80%">To create a delegate method
    for a field select the field's declaration and invoke <b>Source
@@ -95,6 +104,11 @@
 			the same signature as an existing method, you can use Drag &amp; Drop
 			or Copy / Paste. For Drag &amp; Drop (Windows), hold <b>Ctrl+Shift</b>
 			while dropping to create a 'link'.</td>
+		</tr>
+		<tr>
+			<td width="20%" valign="top" align="right"><b>Use Drag &amp; Drop for refactoring</b></td>
+			<td valign="top" align="left" width="80%">You can move Java compilation units between packages by 
+			Drag &amp; Drop - all missing imports will be added and references updated.</td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Use Templates to create
@@ -226,12 +240,15 @@
 </td>
 		</tr>
 		<tr>
-			<td valign="top" align="right"><b>Structure selections</b></td>
+			
+    <td valign="top" align="right"><b>Structured selections</b></td>
 			<td valign="top">You can&nbsp;quickly select Java code syntactically
 			using the Structured Selection feature.<br>
-			Highlight the text and press <b>Ctrl+Shift+Arrow Up</b> or
-			select <b>Edit &gt; Expands Selection To &gt; Enclosing Element</b>
-			from the menu bar.</td>
+      Highlight the text and press <b>Ctrl+Shift+Arrow Up</b> or select <b>Edit 
+      &gt; Expands Selection To &gt; Enclosing Element</b> from the menu bar - 
+      the selection will be expanded to the smallest Java-syntax element that 
+      contains the selection. You can then further expand the selection by invoking 
+      the action again.</td>
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Find the matching bracket</b></td>
@@ -363,16 +380,15 @@
 			<td valign="top" align="left" width="80%">
 			<p>To search for methods with a specific return type, use &quot;*
 			&lt;return type&gt;&quot; as follows:</p>
-			<ol>
-				<li>Open the search dialog and click on the <b>Java Search</b>
-				tab.</li>
-				<li>Type '*' and the return type, separated by a space, in the <b>Search
-				string</b>.&nbsp;</li>
-				<li>Select <b>Method</b> and <b>Declarations</b>
-				and then click <b>Search.</b></li>
-
-			</ol>
-			<img src="images/search-returntype.gif" width=462 height=178 border="0" alt="Search for method with given return type">
+			
+      <ol>
+        <li>Open the search dialog and click on the <b>Java Search</b> tab.</li>
+        <li>Type '*' and the return type, separated by a space, in the <b>Search 
+          string</b>.&nbsp;</li>
+        <li>Select the <b>Case sensitive</b> checkbox.</li>
+        <li>Select <b>Method</b> and <b>Declarations</b> and then click <b>Search.</b></li>
+      </ol>
+			<img src="images/search-returntype.gif" width=466 height=173 border="0" alt="Search for method with given return type">
 </td>
 		</tr>
 		<tr>
@@ -516,7 +532,7 @@
 				name</li>
 				<li>You can open the Hierarchy view not only on types but also on
 				packages, source folders, JAR archives and Java projects.</li>
-				<li>You can drag-and-drop an element onto the Hierarchy view to
+				<li>You can Drag & Drop an element onto the Hierarchy view to
 				focus it on that element.</li>
 				<li>You can change the orientation (from the default vertical to
     horizontal) of the Hierarchy view from the view's toolbar menu.
@@ -653,7 +669,11 @@
 			<img src="images/name-conventions.gif" width=405 height=161 border="0" alt="Name convensions in the code generation preference page">
 </td>
 		</tr>
-
+		<tr>
+			<td width="20%" valign="top" align="right"><b>Organize Imports works not only on single files</b></td>
+			<td valign="top" align="left" width="80%">You can invoke Organize Imports on sets of compilation units, packages, 
+			source folders or Java projects.</td>
+		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Use project specific
 			compiler settings</b></td>
