Fixed broken links

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_model.htm
@@ -54,7 +54,7 @@ following actions:</p>
     to continue running</li>
   <li>step (<a href="../reference/api/org/eclipse/debug/core/model/IStep.html"><b>IStep</b></a>) 
     - the ability to step into, over, and return from the current execution point</li>
-  <li>filtered step (<a href="../reference/api/org/eclipse/debug/core/model/IFilteredStep"><b>IFilteredStep</b></a>) 
+  <li>filtered step (<a href="../reference/api/org/eclipse/debug/core/model/IFilteredStep.html"><b>IFilteredStep</b></a>) 
     - the ability to step with a set of filters applied to the operation</li>
   <li>suspend and resume (<a href="../reference/api/org/eclipse/debug/core/model/ISuspendResume.html"><b>ISuspendResume</b></a>) 
     - the ability to suspend and resume execution</li>
