updated image for localhistory-restore

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -300,7 +300,7 @@
 			restore deleted methods selectively.
 			<p>Select a container and use <b>Restore from Local History</b>
 			to restore any removed members.
-			<p><img src="images/localhistory-restore.gif" width=460 height=279 border="0" alt="Restore from local history dialog">
+			<p><img src="images/localhistory-restore.gif" width=345 height=229 border="0" alt="Restore from local history dialog">
 			</td>
 		</tr>
 
@@ -974,7 +974,25 @@
 			<p><img src="images/stack-trace-hyperlink.gif" width=416 height=133 alt="Stack traces in Console view with hyperlinks"></p>
 			</td>
 		</tr>
+			
+		<tr>
+			<td valign="top" align="right">
+				<b>Ignoring Java formatting</b>
+			</td>
+			<td valign="top" align="left">
+				When comparing Java files you can 
+				In the Compare Editor select the "Ignore Whitespace" button in the toolbar
+			</td>
+		</tr>
 				
+		<tr>
+			<td valign="top" align="right">
+				<b>Structural compare of Java soure code</b>
+			</td>
+			<td valign="top" align="left">
+			</td>
+		</tr>
+	
 	</tbody>	
 </table>
 
