feedbakc from Grant incorporated

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -33,11 +33,11 @@
 	<td><p><B>Java &gt; Editor</B> preference page offers more configuration options:</p>
       <ul>
         <li>you can configure the hover help in the Java editor via the <b>Hovers</b> 
-          panel</li>
-        <li>you can use the <b>Typing</b> panel to control automatic closing of 
+          tab</li>
+        <li>you can use the <b>Typing</b> tab to control automatic closing of 
           parentheses, brackets, strings, and comments, for smart wrapping of 
           strings, and other helpful Java-specific editor behavior</li>
-        <li>you can use the <b>Annotations</b> panel to customize the visual appearance 
+        <li>you can use the <b>Annotations</b> tab to customize the visual appearance 
           of errors, warning, tasks, etc.</li>
       </ul></td>
   </tr>
@@ -59,13 +59,13 @@
   </tr>
   <tr>
     <td><P><B>Find in file</B></P></td>
-	<td>The Search menu group contains a 
-      new command (<b>Occurrences in File</b>) to search for all occurrences of 
-      types, fields, methods and local variables inside the compilation unit or 
-      class file declared the element. Consistent with other search commands, 
-      markers are generated and presented as annotations in the editor. Entries 
-      in the Search Results view have different icons for read and write access. 
-      In this example you see the search results for "fName" in "TestCase.java". 
+	<td>The Search menu group contains a new command (<b>Occurrences in File</b>) 
+      to search for all occurrences of types, fields, methods and local variables 
+      inside the compilation unit or class file in which the element is declared. 
+      Consistent with other search commands, markers are generated and presented 
+      as annotations in the editor. Entries in the Search Results view have different 
+      icons for read and write access. In this example you see the search results 
+      for "fName" in "TestCase.java". 
       <P align=center><img src="images/search.gif" width=321 height=344 alt="Editor and Search view showing occurrences of a field in a file"></P>
 	</td>
   </tr>
@@ -76,8 +76,7 @@
         &gt; Quick Fix</b> from the menu to:</p>
       <UL>
         <LI>Create missing constructors 
-        <LI>Remove unused private methods/fields or 
-          types 
+        <LI>Remove unused private methods, fields or types 
         <LI>Fix ambiguous imports (also suggests Organize 
           Imports) 
         <LI>Create method in outer type (for methods 
@@ -90,10 +89,11 @@
       </UL>
       <P>Other compiler-detected problems that can be fixed using Quick Fix include:</P>
       <ul>
-        <li>Instance variable used in a static context</li>
+        <li>Instance fields used in a static context</li>
+        <li>Static methods or fields accessed via in a non-static way</li>
         <li>Declaration of an abstract method in a non-abstract type</li>
-        <li>Non-visible method, field, type, or import.</li>
-        <li>Not externalized strings</li>
+        <li>Non-visible method, field, type, or import</li>
+        <li>Non-externalized strings</li>
       </ul>
       <P><img src="images/quickFix.gif" width=458 height=159 alt="Quick Fix window"></P>
 	 </td>
@@ -150,7 +150,7 @@
 	<td>      <p>While hovering over Java code, pressing the Ctrl key and moving the mouse 
         turns class, method, and field identifiers into clickable links to the 
         corresponding declaration. This option can be configured via the <b>Java 
-        &gt; Editor &gt; Navigation</b> panel.</p>
+        &gt; Editor &gt; Navigation</b> tab.</p>
       <p><img src="images/hyperlinking.gif" width=429 height=132 alt="Hyper-links in Java code"></p>
 </td>
   </tr>
@@ -190,11 +190,10 @@
   </tr>
   <tr>
     <td><P><B>Class file editor</B></P></td>
-	<td>The <B>Class File Editor</B> has 
-      caught up with the <B>Compilation Unit Editor</B>. It now supports cursor-line 
-      highlighting, line numbers, annotation highlighting, overview ruler, print 
-      margin, semantic selection expansion, and keyboard navigation between the 
-      members of the class file.</td>
+	<td>The class file editor has caught up with the compilation unit editor. 
+      It now supports cursor-line highlighting, line numbers, annotation highlighting, 
+      overview ruler, print margin, semantic selection expansion, and keyboard 
+      navigation between the members of the class file.</td>
   </tr>
 </table>
 
@@ -319,19 +318,18 @@
       <p>Many new refactoring actions are available:</p>
       <ul>
         <li><b>Move Instance Method:</b> this refactoring allows you to move the 
-          method to the declared class of one of the method's parameters, or to 
-          the declared class of a field. This creates a new method and converts 
-          the old method into a delegate (passing it a pointer to <code>this</code> 
-          if necessary). </li>
+          method to the declared class of one of its parameters or fields. This 
+          creates a new method and converts the old method into a delegate (passing 
+          it a pointer to <code>this</code> if necessary). </li>
         <li><b>Push Members Down:</b> this refactoring allows you to move a set 
           of methods and fields from a class to its subclasses.</li>
         <li><b>Inline Method:</b> this refactoring inlines calls to a particular 
           Java method, either at a selected call site or everywhere the method 
-          is called. It is available polimorphically via the <b>Refactor &gt; 
+          is called. It is available polymorphically via the <b>Refactor &gt; 
           Inline</b> menu entry.</li>
         <li><b>Inline Constant:</b> this refactoring inlines uses of a particular 
           Java static final field, either at a selected reference site or everywhere 
-          the field is referenced. It is available polimorphically via the <b>Refactor 
+          the field is referenced. It is available polymorphically via the <b>Refactor 
           &gt; Inline</b> menu entry.</li>
         <li><b>Extract Constant:</b> this refactoring creates a static final field 
           from the selected expression and substitutes a field reference, and 
@@ -362,8 +360,9 @@
       <p>Several refactoring actions have been improved:</p>
       <ul>
         <li><b>Change Method Signature: </b>this refactoring is a replacement 
-          for Modify Parameters refactoring. It allows you to change method visibiliry, 
-          return type and add, remove, rename and reorder method parameters.</li>
+          for the Modify Parameters refactoring. It allows you to change a method's 
+          visibility and return type, and add, remove, rename and reorder method 
+          parameters.</li>
         <li><b>Pull Members Up: </b>this refactoring has been improved in several 
           ways
           <ul>
@@ -374,7 +373,7 @@
               up together in order to satisfy visibility constraints</li>
           </ul>
         </li>
-        <li><b>Extract Method: </b>you can reoder and rename parameters of the 
+        <li><b>Extract Method: </b>you can reorder and rename parameters of the 
           extracted method.</li>
         <li><b>Rename and Move Refactorings: </b>when renaming a Java type or 
           package (or when moving a type to a different package), the fully qualified 
@@ -408,7 +407,8 @@
         <LI>Exclusion filters let you exclude certain 
           source files within a source folder from being compiled.
         <LI>Source folders can now be nested - use an exclusion filter on the 
-          parent folder to exclude the subfolder you wish to add to build path. 
+          parent folder to exclude the subfolder you wish to add to the build 
+          path. 
         <LI>The location of generated class files can 
           be set individually for each source folder.</LI>
         <LI>You can also use linked folders as source folders, class folders or 
@@ -417,10 +417,9 @@
       <P align=center><img src="images/buildPathUI.gif" width=396 height=309 alt="Java Build Path property page"></P></TD></TR>
   <TR>
     <TD><b>Project-specific Java compiler settings</b></TD>
-    <TD>In addition to workspace-wide Java compiler settings 
-      (<b>Java &gt; Compiler</b>), you can now configure these for a specific 
-      Java project through the new <b>Java Compiler</b> property page on each 
-      Java project.</TD>
+    <TD>In addition to workspace-wide Java compiler preference settings (<b>Java 
+      &gt; Compiler</b>), you can now configure these for a specific Java project 
+      through the new <b>Java Compiler</b> property page on each Java project.</TD>
  </TR>
   <TR>
     <TD>
@@ -462,7 +461,7 @@
       in a similar way to normal templates. These code templates are 
       used whenever code is generated. (The comments replace the existing 'filecomment' 
       and 'typecomment' templates used for code generation.) 
-      <P align=center><img src="images/code-templates.gif" width=416 height=409 alt="Code and Comments panel in Code Generation preference page" border=0> </P></TD></TR>
+      <P align=center><img src="images/code-templates.gif" width=416 height=409 alt="Code and Comments tab in Code Generation preference page" border=0> </P></TD></TR>
   <TR>
     <TD>
       <P><B>Configurable task 
@@ -487,10 +486,10 @@
   <TR>
     <TD><P><B>Add Delegate Methods dialog</B> </P></TD>
     <TD>
-      <p>You can now easily generate delegate methods 
-        (methods that delegate to a method provided by an instance variable) by 
-        using the <b>Generate Delegate Methods</b> action.&nbsp;The action is 
-        available on all types with fields. </p>
+      <p>You can now easily generate delegate methods (methods that delegate to 
+        a method provided by an instance variable) by using the <b>Source &gt; 
+        Generate Delegate Methods</b> action.&nbsp;The action is available on 
+        all types with fields. </p>
       <p><img src="images/generate_delegate_methods.gif" alt="Add Delegate Methods dialog" width="324" height="408"> 
       </p>
     </TD></TR>
